Fix mobile header logo so hamburger menu is visible

--- a/fern/assets/input.css
+++ b/fern/assets/input.css
@@ -404,6 +404,14 @@ button[class^="Sidebar-link-buttonWrapper"] {
   -webkit-font-smoothing: unset !important;
 } */
 
+.fern-header-logo-container img {
+  @media screen and (max-width: 576px) {
+    width: 21px !important;
+    object-fit: cover !important;
+    object-position: left !important;
+  }
+}
+
 #content {
   padding: 0 32px;
 }
